--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -44,7 +44,7 @@
               </li>
               <li class="menu-item"><%= link_to "Công nghệ thiết bị", { controller: "equipment", action: "index" } %></li>
               <li class="menu-item"><%= link_to "Thông báo", { controller: "notification", action: "index" } %></li>
-              <li class="menu-item"><a href="shop.html">Tin tức</a>
+              <li class="menu-item"><a href="#">Tin tức</a>
                  <ul class="sub-menu">
                     <li class="menu-item"><%= link_to "Tin chuyên ngành", { controller: "specialized_news", action: "index" } %></li>
                     <li class="menu-item"><%= link_to "Tin Việt Ren", { controller: "vietren_news", action: "index" } %></li>
