--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,9 +14,10 @@
             <!-- Top Bar Left -->
             <div class="above-nav-bar col-xs-6 text-right">
               <ul class="social social-transparent-border">
-                 <li><a href="#"><img src="/backend/assets/images/flags/gb.png"></a></li>
-                 <li><a href="#"><img src="/backend/assets/images/flags/gb.png"></a></li>
-                 
+                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                 <li><a href="#"><i class="fa fa-google"></i></a></li>
+                 <li><a href="#"><i class="fa fa-youtube"></i></a></li>
               </ul>
            </div>
             <!-- /Top Bar Left -->
