--- a/app/views/organization/index.html.erb
+++ b/app/views/organization/index.html.erb
@@ -7,14 +7,14 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Thư xuân</h1> </div>
+        <h1 class="text-uppercase page-title">Cơ cấu tổ chức</h1> </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
               <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li class="active">Thư xuân</li>
+              <li class="active"><%= @organizations.tag_vn %></li>
            </ol>
         </div>
      </div>
@@ -29,7 +29,7 @@
                     <h3 class="title small-margin text-uppercase"><%= @organizations.title_vn %></h3>
                  </header>
                  <div class="post-content">
-                    <%= @organizations.content_vn.html_safe %>
+                    <%= @organizations.content_en.html_safe %>
                  </div>
               </article>
            </div>
