--- a/app/views/letter_spring/_header.html.erb
+++ b/app/views/letter_spring/_header.html.erb
@@ -50,7 +50,7 @@
                     <li class="menu-item"><a href="#">Dự án công ty đang đầu tư</a></li>
                  </ul>
               </li>
-              <li class="menu-item"><%= link_to "Công nghệ thiết bị", { controller: "equipment", action: "index" } %></li>
+              <li class="menu-item"><%= link_to "Công nghệ thiết bị", { controller: "equipment_page", action: "index" } %></li>
               <li class="menu-item"><%= link_to "Thông báo", { controller: "notification", action: "index" } %></li>
               <li class="menu-item"><a href="#">Tin tức</a>
                  <ul class="sub-menu">
