--- a/public/frontend/stylesheets/custom.css
+++ b/public/frontend/stylesheets/custom.css
@@ -13,7 +13,7 @@
         max-width: 34%;
     }
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 500px) {
     .logo-img {
         height: auto;
         max-width: 34%;
