--- a/app/views/organization/index.html.erb
+++ b/app/views/organization/index.html.erb
@@ -29,7 +29,7 @@
                     <h3 class="title small-margin text-uppercase"><%= @organizations.title_vn %></h3>
                  </header>
                  <div class="post-content">
-                    <%= @organizations.content_en.html_safe %>
+                    <%= @organizations.content_vn.html_safe %>
                  </div>
               </article>
            </div>
