finish contact, notification, career, news

--- a/app/views/letter_spring/_header.html.erb
+++ b/app/views/letter_spring/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header-wrap clearfix">
      <!-- Logo -->
      <div class="logo pull-left">
-        <a href="<%= root_path %>"> <img src="/frontend/images/logo-viet-ren.jpg" alt="Logo" class="logo-img"> </a>
+        <a href="<%= root_path %>"> <img src="/frontend/images/logo_vietren.png" alt="Logo" class="logo-img"> </a>
      </div>
      <!-- /Logo -->
      <!-- Site navigation -->
