--- a/app/views/admin/information/_form.html.erb
+++ b/app/views/admin/information/_form.html.erb
@@ -15,6 +15,15 @@
         </ul>
         <div class="tab-content">
             <div class="tab-pane has-padding active" id="control-tab1">
+              <div class="form-group">
+                  <%= f.label "Picture: ", class: "col-lg-2 control-label" %>
+                  <div class="col-lg-10">
+                    <%= f.file_field :image_url, class: "file-styled" %>
+                    <span class="help-block">Accepted formats: gif, png, jpg.</span>
+                    <%= image_tag(@information.image_url.medium_news, size: "356x237", class: "img-rouded") %>
+                  </div>
+              </div>
+              
                 <div class="form-group">
                     <%= f.label "Type: ", class: "col-lg-2 control-label" %>
                     <div class="col-lg-10">
