--- a/app/views/admin/information/index.html.erb
+++ b/app/views/admin/information/index.html.erb
@@ -68,6 +68,7 @@
                     <table class="table datatable-about-us">
                         <thead>
                             <tr>
+                                <th>Picture</th>
                                 <th>Title</th>
                                 <th>Content</th>
                                 <th>Status</th>
@@ -78,6 +79,11 @@
                         <tbody>
                             <% @information.each do |item| %>
                                 <tr>
+                                    <td>
+                                        <div class="media-left">
+                                            <img src="<%= item.image_url.small_news if item.image_url? %>" class="img-rounded">
+                                        </div>
+                                    </td>
                                     <td>
                                         <%= link_to item.title_vn, [:admin, item] %><br/>
                                         <%= link_to item.title_en, [:admin, item] %>
