--- a/app/views/admin/information/show.html.erb
+++ b/app/views/admin/information/show.html.erb
@@ -74,6 +74,12 @@
                                 <div class="tab-pane has-padding active" id="control-tab1">
                                     <form class="form-horizontal" role="form">
                                         <div class="form-group">
+                                            <%= label "", "Picture: ", class: "control-label col-sm-2 text-semibold" %>
+                                            <div class="col-sm-10">
+                                                <%= image_tag(@information.image_url.medium_news, size: "356x237",alt: "Picture of news", class: "img-rouded") %>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
                                             <%= label "", "Type: ", class: "control-label col-sm-2 text-semibold" %>
                                             <div class="col-sm-10">
                                                 <%= content_tag(:p, class: "form-control-static") do %>
