--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -49,31 +49,27 @@
                     <tbody>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-long-arrow-right"></i></th>
-                          <td class="info-table-content">Constructo ltd. inc.</td>
+                          <td class="info-table-content"><%= @company.name_vn %></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-map-marker"></i></th>
-                          <td class="info-table-content">300 Pennsylvania Ave NW, Washington, DC 20006, USA</td>
+                          <td class="info-table-content"><%= @company.address_vn %></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-phone"></i></th>
-                          <td class="info-table-content">+386 40 222 555</td>
+                          <td class="info-table-content"><%= @company.phone + " - " + @company.phone_2 %></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-fax"></i></th>
-                          <td class="info-table-content">+386 40 222 554</td>
-                       </tr>
-                       <tr class="info-table-row">
-                          <th class="info-table-icon"><i class="fa fa-mobile-phone"></i></th>
-                          <td class="info-table-content">+386 40 222 555</td>
+                          <td class="info-table-content"><%= @company.fax %></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-envelope"></i></th>
-                          <td class="info-table-content">mail@companyname.com</td>
+                          <td class="info-table-content"><a href="mailto:<%= @company.email %>"><%= @company.email %></a></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-globe"></i></th>
-                          <td class="info-table-content"><strong><a href="http://www.anpsthemes.com" target="_blank">www.yoursitename.com</a></strong></td>
+                          <td class="info-table-content"><strong><a href="http://vietren.vn/" target="_blank">http://vietren.vn/</a></strong></td>
                        </tr>
                     </tbody>
                  </table>
