--- a/app/views/achivement/index.html.erb
+++ b/app/views/achivement/index.html.erb
@@ -38,46 +38,45 @@
              </div>
              <div class="row">
                 <div class="col-md-12 page-content padding-bottom-xl">
-                     <div class="gallery row">
-                        <div class="col-xs-2">
+                     <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/thanh-tich-01.jpg"><img src="/frontend/images/thanh-tich-01.jpg" alt="Gallery 1"></a>
+                                 <a href="/frontend/images/bang-khen/big-2.jpg"><img src="/frontend/images/bang-khen/small-2.jpg" alt="Gallery 2"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/thanh-tich-02.jpg"><img src="/frontend/images/thanh-tich-02.jpg" alt="Gallery 2"></a>
+                                 <a href="/frontend/images/bang-khen/big-3.jpg"><img src="/frontend/images/bang-khen/small-3.jpg" alt="Gallery 3"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/thanh-tich-03.jpg"><img src="/frontend/images/thanh-tich-03.jpg" alt="Gallery 3"></a>
+                                 <a href="/frontend/images/bang-khen/big-4.jpg"><img src="/frontend/images/bang-khen/small-4.jpg" alt="Gallery 4"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/thanh-tich-04.jpg"><img src="/frontend/images/thanh-tich-04.jpg" alt="Gallery 4"></a>
+                                 <a href="/frontend/images/bang-khen/big-5.jpg"><img src="/frontend/images/bang-khen/small-5.jpg" alt="Gallery 5"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/thanh-tich-05.jpg"><img src="/frontend/images/thanh-tich-05.jpg" alt="Gallery 4"></a>
+                                 <a href="/frontend/images/bang-khen/big-6.png"><img src="/frontend/images/bang-khen/small-6.png" alt="Gallery 6"></a>
                               </div>
                            </figure>
                         </div>
                         <div class="col-xs-2">
                            <figure class="gallery-item">
                               <div class="gallery-icon">
-                                 <a href="/frontend/images/thanh-tich-06.jpg"><img src="#" alt="Gallery 4"></a>
+                                 <a href="/frontend/images/bang-khen/big-1.jpg"><img src="/frontend/images/bang-khen/small-1.jpg" alt="Gallery 6"></a>
                               </div>
                            </figure>
                         </div>
