--- a/app/views/completed_construction/index.html.erb
+++ b/app/views/completed_construction/index.html.erb
@@ -30,28 +30,28 @@
                            <table class="table table-bordered">
                               <thead class="bg-primary">
                                  <tr>
-                                    <th rowspan="2">Tên công trình</th>
-                                    <th rowspan="2">Tổng giá trị hợp đồng</th>
-                                    <th rowspan="2">Giá trị do nhà thầu thực hiện</th>
-                                    <th colspan="2">Thời gian hợp đồng</th>
-                                    <th rowspan="2">Tên cơ quan thực hiện</th>
-                                    <th rowspan="2">Tên nước</th>
+                                    <th rowspan="2" style="text-align:center; vertical-align:middle; font-weight: bold">Tên công trình</th>
+                                    <th rowspan="2" style="text-align:center; vertical-align:middle; font-weight: bold">Tổng giá trị hợp đồng</th>
+                                    <th rowspan="2" style="text-align:center; vertical-align:middle; font-weight: bold">Giá trị do nhà thầu thực hiện</th>
+                                    <th colspan="2" style="text-align:center; vertical-align:middle; font-weight: bold">Thời gian hợp đồng</th>
+                                    <th rowspan="2" style="text-align:center; vertical-align:middle; font-weight: bold">Tên cơ quan thực hiện</th>
+                                    <th rowspan="2" style="text-align:center; vertical-align:middle; font-weight: bold">Tên nước</th>
                                  </tr>
                                  <tr>
-                                    <th>Khởi công</th>
-                                    <th>Hoàn thành</th>
+                                    <th style="text-align:center; vertical-align:middle; font-weight: bold">Khởi công</th>
+                                    <th style="text-align:center; vertical-align:middle; font-weight: bold">Hoàn thành</th>
                                  </tr>
                               </thead>
                               <tbody>
                                  <% @completed_construction.each do |item| %>
                                     <tr>
-                                       <td><%= item.name_vn %></td>
-                                       <td><%= item.total_value %></td>
-                                       <td><%= item.cost_performance %></td>
-                                       <td><%= item.start_at.strftime("%Y") %></td>
-                                       <td><%= item.end_at.strftime("%Y") %></td>
-                                       <td><%= item.name_company %></td>
-                                       <td><%= item.name_country %></td>
+                                       <td style="vertical-align:middle"><%= item.name_vn %></td>
+                                       <td style="text-align:right; vertical-align:middle"><%= format_number(item.total_value) %></td>
+                                       <td style="text-align:right; vertical-align:middle"><%= format_number(item.cost_performance) %></td>
+                                       <td style="text-align:center; vertical-align:middle"><%= item.start_at.strftime("%Y") %></td>
+                                       <td style="text-align:center; vertical-align:middle"><%= item.end_at.strftime("%Y") %></td>
+                                       <td style="vertical-align:middle"><%= item.name_company %></td>
+                                       <td style="text-align:center; vertical-align:middle"><%= item.name_country %></td>
                                     </tr>
                                  <% end %>
                               </tbody>
