--- a/app/views/equipment_page/index.html.erb
+++ b/app/views/equipment_page/index.html.erb
@@ -7,14 +7,15 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="page-title text-uppercase">Công nghệ thiết bị</h1> </div>
+        <h1 class="page-title text-uppercase"><%= t(:equipment) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li class="active">Công nghệ thiết bị</li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li class="active"><%= t(:equipment) %></li>
            </ol>
         </div>
      </div>
