--- a/app/views/home/_slideshow.html.erb
+++ b/app/views/home/_slideshow.html.erb
@@ -13,12 +13,12 @@
                <!-- LAYER NR. 3 -->
                <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="-75" data-y="center" data-voffset="43" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-visibility="['on','on','on','off']"
                data-start="500">
-                <%= link_to "Về chúng tôi", { controller: "about_us", action: "index" }, class: "btn btn-wide" %>
+                <%= link_to t(:about_us), { controller: "about_us", action: "index" }, class: "btn btn-wide" %>
                </div>
                <!-- LAYER NR. 4 -->
                <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="75" data-y="center" data-voffset="43" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-visibility="['on','on','on','off']"
                data-start="500">
-                <%= link_to "Liên hệ", { controller: "contact", action: "index" }, class: "btn btn-light btn-wide" %>
+                <%= link_to t(:contact), { controller: "contact", action: "index" }, class: "btn btn-light btn-wide" %>
                </div>
             </li>
           <% else %>
@@ -31,12 +31,12 @@
                <!-- LAYER NR. 3 -->
                <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="-75" data-y="center" data-voffset="43" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-visibility="['on','on','on','off']"
                data-start="500">
-                <%= link_to "Về chúng tôi", { controller: "about_us", action: "index" }, class: "btn btn-wide" %>
+                <%= link_to t(:about_us), { controller: "about_us", action: "index" }, class: "btn btn-wide" %>
                </div>
                <!-- LAYER NR. 4 -->
                <div class="tp-caption tp-resizeme" data-x="center" data-hoffset="75" data-y="center" data-voffset="43" data-whitespace="nowrap" data-transform_idle="o:1;" data-transform_in="o:1;s:500" data-transform_out="o:0;s:500" data-visibility="['on','on','on','off']"
                data-start="500">
-                <%= link_to "Liên hệ", { controller: "contact", action: "index" }, class: "btn btn-light btn-wide" %>
+                <%= link_to t(:contact), { controller: "contact", action: "index" }, class: "btn btn-light btn-wide" %>
                </div>
             </li>
           <% end %>
