--- a/app/views/recruitment/index.html.erb
+++ b/app/views/recruitment/index.html.erb
@@ -7,14 +7,15 @@
    <main class="site-main">
       <!-- Page header -->
       <div class="page-header page-header-sm">
-         <h1 class="text-uppercase page-title">Thông tin tuyển dụng</h1> </div>
+         <h1 class="text-uppercase page-title"><%= t(:recruitment) %></h1>
+      </div>
       <!-- /Page header -->
       <!-- Breadcrumbs -->
       <div class="breadcrumb">
          <div class="container">
             <ol>
-               <li><a href="<%= root_path %>">Trang chủ</a></li>
-               <li class="active">Tuyển dụng</li>
+               <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+               <li class="active"><%= t(:recruitment) %></li>
             </ol>
          </div>
       </div>
