--- a/app/views/vietren_news/index.html.erb
+++ b/app/views/vietren_news/index.html.erb
@@ -7,14 +7,15 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Tin tức từ Việt Ren</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:vietren_news) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li class="active">Tin Việt Ren</li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li class="active"><%= t(:vietren_news) %></li>
            </ol>
         </div>
      </div>
