--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -7,14 +7,14 @@
     <main class="site-main">
        <!-- Page header -->
        <div class="page-header page-header-sm">
-          <h1 class="text-uppercase page-title">Giới thiệu</h1> </div>
+          <h1 class="text-uppercase page-title"><%= t(:intro) %></h1> </div>
        <!-- /Page header -->
        <!-- Breadcrumbs -->
        <div class="breadcrumb">
           <div class="container">
              <ol>
-                <li><a href="<%= root_path %>">Trang chủ</a></li>
-                <li class="active"><%= @about_us.tag_vn %></li>
+                <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+                <li class="active"><%= t(:about_us) %></li>
              </ol>
           </div>
        </div>
