--- a/app/views/achivement/index.html.erb
+++ b/app/views/achivement/index.html.erb
@@ -7,14 +7,15 @@
     <main class="site-main">
        <!-- Page header -->
        <div class="page-header page-header-sm">
-          <h1 class="text-uppercase page-title">Thành tích đạt được</h1> </div>
+          <h1 class="text-uppercase page-title"><%= t(:achievements) %></h1>
+       </div>
        <!-- /Page header -->
        <!-- Breadcrumbs -->
        <div class="breadcrumb">
           <div class="container">
              <ol>
-                <li><a href="<%= root_path %>">Trang chủ</a></li>
-                <li class="active"><%= @achievements.tag_vn if !@achievements.nil? %></li>
+                <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+                <li class="active"><%= t(:achievements) %></li>
              </ol>
           </div>
        </div>
@@ -34,7 +35,8 @@
           <div class="container">
              <div class="row">
                 <div class="col-md-12">
-                   <h3 class="title text-uppercase">Thành tích</h3> </div>
+                   <h3 class="title text-uppercase"><%= t(:achievements) %></h3>
+                </div>
              </div>
              <div class="gallery row">
                   <div class="col-xs-2">
