--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -7,14 +7,15 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Liên hệ</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:contact) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li class="active">Liên hệ</li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li class="active"><%= t(:contact) %></li>
            </ol>
         </div>
      </div>
@@ -35,7 +36,7 @@
         <div class="container">
            <div class="row">
               <div class="col-md-12">
-                 <h3 class="title margin-bottom-small">Liên hệ với chúng tôi</h3>
+                 <h3 class="title margin-bottom-small"><%= t(:contact_us) %></h3>
               </div>
            </div>
            <div class="row" style="margin-top: 40px;">
@@ -45,11 +46,11 @@
                     <tbody>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-long-arrow-right"></i></th>
-                          <td class="info-table-content"><%= @company.name_vn %></td>
+                          <td class="info-table-content"><%= t(:company_name) %></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-map-marker"></i></th>
-                          <td class="info-table-content"><%= @company.address_vn %></td>
+                          <td class="info-table-content"><%= t(:company_address) %></td>
                        </tr>
                        <tr class="info-table-row">
                           <th class="info-table-icon"><i class="fa fa-phone"></i></th>
