--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -18,49 +18,53 @@
            <!-- /Mobile Search -->
            <!-- Main menu -->
            <ul id="main-menu" class="main-menu">
-              <li class="menu-item"><%= link_to t('home'), root_path %>
+              <li class="menu-item"><%= link_to t(:home), root_path %>
               </li>
               <li class="menu-item menu-item-has-children"><%= link_to t(:intro), "#" %>
                  <ul class="sub-menu">
                     <li class="menu-item"><%= link_to t(:letter_spring), { controller: "letter_spring", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Về chúng tôi", { controller: "about_us", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Cơ cấu tổ chức", { controller: "organization", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Tài chính", { controller: "finance", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Thành tích đạt được", { controller: "achivement", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:about_us), { controller: "about_us", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:organizational_structure), { controller: "organization", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:finance), { controller: "finance", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:achievements), { controller: "achivement", action: "index" } %></li>
                  </ul>
               </li>
-              <li class="menu-item menu-item-has-children"><a href="#">Công trình</a>
+              <li class="menu-item menu-item-has-children"><%= link_to t(:construction), "#" %>
                  <ul class="sub-menu">
-                    <li class="menu-item"><%= link_to "Công trình đã hoàn thành", { controller: "completed_construction", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Công trình đang thi công", { controller: "under_construction", action: "index" } %></li>
-                    <li class="menu-item menu-item-has-children"><a href="#">Dự án công ty đang đầu tư</a>
+                    <li class="menu-item"><%= link_to t(:completed_construction_works), { controller: "completed_construction", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:implementing_construction_works), { controller: "under_construction", action: "index" } %></li>
+                    <li class="menu-item menu-item-has-children"><%= link_to t(:investment_projects), "#" %>
                       <ul class="sub-menu">
                         <% @menu_projects.each do |item| %>
-                          <li class="menu-item"><%= link_to item.name_vn, { controller: "project_detail", action: "index", project_id: item.id } %></li>
+                          <% if params[:locale] == "vi" %>
+                            <li class="menu-item"><%= link_to item.name_vn, { controller: "project_detail", action: "index", project_id: item.id } %></li>
+                          <% else %>
+                            <li class="menu-item"><%= link_to item.name_en, { controller: "project_detail", action: "index", project_id: item.id } %></li>
+                          <% end %>
                         <% end %>
                      </ul>
                     </li>
                  </ul>
               </li>
-              <li class="menu-item"><%= link_to "Công nghệ thiết bị", { controller: "equipment_page", action: "index" } %></li>
-              <li class="menu-item"><%= link_to "Thông báo", { controller: "notification", action: "index" } %></li>
-              <li class="menu-item  menu-item-has-children"><a href="#">Tin tức</a>
+              <li class="menu-item"><%= link_to t(:equipment), { controller: "equipment_page", action: "index" } %></li>
+              <li class="menu-item"><%= link_to t(:notification), { controller: "notification", action: "index" } %></li>
+              <li class="menu-item  menu-item-has-children"><%= link_to t(:news), "#" %>
               <ul class="sub-menu">
-                    <li class="menu-item"><%= link_to "Tin chuyên ngành", { controller: "specialized_news", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Tin Việt Ren", { controller: "vietren_news", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:specialized_news), { controller: "specialized_news", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:vietren_news), { controller: "vietren_news", action: "index" } %></li>
                  </ul>
               </li>
-              <li class="menu-item  menu-item-has-children"><a href="#">Thư viện ảnh</a>
+              <li class="menu-item  menu-item-has-children"><%= link_to t(:gallery), "#" %>
                  <ul class="sub-menu">
-                    <li class="menu-item"><%= link_to "Hình ảnh các dự án đầu tư", { controller: "investment_projects", action: "index" } %></li>
-                    <li class="menu-item"><%= link_to "Hình ảnh các công trình thi công", { controller: "gallery", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:investment_projects), { controller: "investment_projects", action: "index" } %></li>
+                    <li class="menu-item"><%= link_to t(:construction_works), { controller: "gallery", action: "index" } %></li>
                  </ul>
               </li>
-              <li class="menu-item"><%= link_to "Tuyển dụng", { controller: "recruitment", action: "index" } %></li>
-              <li class="menu-item"><%= link_to "Liên hệ", { controller: "contact", action: "index" } %></li>
+              <li class="menu-item"><%= link_to t(:recruitment), { controller: "recruitment", action: "index" } %></li>
+              <li class="menu-item"><%= link_to t(:contact), { controller: "contact", action: "index" } %></li>
               <li class="menu-item color-red">
-                <% params[:locale] = 'vi' %><a href="<%= url_for( params ) %>" style="color: red;">VI</a>
-                <% params[:locale] = 'en' %><a href="<%= url_for( params ) %>" style="color: blue;">EN</a>
+                <% params[:locale] == 'vi' %><a href="<%= url_for( params ) %>" style="color: red;">VI</a>
+                <% params[:locale] == 'en' %><a href="<%= url_for( params ) %>" style="color: blue;">EN</a>
               </li>
            </ul>
            <!-- /Main menu -->
