--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -41,55 +41,104 @@
       <div class="container">
          <div class="row">
             <div class="col-md-12">
-               <h2 class="title">Công Ty Cổ Phần Việt Ren</h2> </div>
+               <h2 class="title"><%= t(:company_name) %></h2> </div>
          </div>
          <div class="row">
-            <div class="col-md-4">
-               <div class="icon">
-                  <div class="icon-header">
-                     <div class="icon-media"><i class="fa fa-anchor"></i></div>
-                     <h3 class="icon-title text-uppercase">Xây dựng</h3>
+            <% if params[:locale] == "vi" %>
+               <div class="col-md-4">
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-anchor"></i></div>
+                        <h3 class="icon-title text-uppercase">Xây dựng</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Xây dựng các công trình giao thông từ năm 2000.<br/>
+                        - Xây dựng các công trình thuỷ lợi năm 2000.<br/>
+                        - Xây dựng các công trình điện, cấp thoát nước từ năm 2001.<br/>
+                        - Xây dựng các công trình dân dụng từ năm 2003.
+                     </p>
                   </div>
-                  <p class="icon-desc">
-                     - Xây dựng các công trình giao thông từ năm 2000.<br/>
-                     - Xây dựng các công trình thuỷ lợi năm 2000.<br/>
-                     - Xây dựng các công trình điện, cấp thoát nước từ năm 2001.<br/>
-                     - Xây dựng các công trình dân dụng từ năm 2003.
-                  </p>
-               </div>
-               <div class="icon">
-                  <div class="icon-header">
-                     <div class="icon-media"><i class="fa fa-train"></i></div>
-                     <h3 class="icon-title text-uppercase">San lấp</h3>
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-train"></i></div>
+                        <h3 class="icon-title text-uppercase">San lấp</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - San lấp mặt bằng công nghiệp từ năm 2000.
+                     </p>
                   </div>
-                  <p class="icon-desc">
-                     - San lấp mặt bằng công nghiệp từ năm 2000.
-                  </p>
                </div>
-            </div>
-            <div class="col-md-4 col-md-offset-4">
-               <div class="icon">
-                  <div class="icon-header">
-                     <div class="icon-media"><i class="fa fa-institution"></i></div>
-                     <h3 class="icon-title text-uppercase">Đầu tư</h3>
+               <div class="col-md-4 col-md-offset-4">
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-institution"></i></div>
+                        <h3 class="icon-title text-uppercase">Đầu tư</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Đầu tư kinh doanh các công trình giao thông.<br/>
+                        - Đầu tư kinh doanh các công trình thủy lợi - thủy điện, công trình công nghiệp, dân dụng.<br/>
+                        - Đầu tư kinh doanh các công trình điện, nước.<br/>
+                        - Đầu tư kinh doanh khoáng sản trong và ngoài nước.
+                     </p>
                   </div>
-                  <p class="icon-desc">
-                     - Đầu tư kinh doanh các công trình giao thông.<br/>
-                     - Đầu tư kinh doanh các công trình thủy lợi - thủy điện, công trình công nghiệp, dân dụng.<br/>
-                     - Đầu tư kinh doanh các công trình điện, nước.<br/>
-                     - Đầu tư kinh doanh khoáng sản trong và ngoài nước.
-                  </p>
-               </div>
-               <div class="icon">
-                  <div class="icon-header">
-                     <div class="icon-media"><i class="fa fa-building-o"></i></div>
-                     <h3 class="icon-title text-uppercase">Sản xuất</h3>
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-building-o"></i></div>
+                        <h3 class="icon-title text-uppercase">Sản xuất</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Sản xuất vật liệu xây dựng từ năm 2000.
+                     </p>
                   </div>
-                  <p class="icon-desc">
-                     - Sản xuất vật liệu xây dựng từ năm 2000.
-                  </p>
                </div>
-            </div>
+            <% else %>
+               <div class="col-md-4">
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-anchor"></i></div>
+                        <h3 class="icon-title text-uppercase">Construction</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Construction of roads since 2000.<br/>
+                        - Construction of irrigation works since 2000.<br/>
+                        - Construction of electrical works and water supply and drainage since 2001.<br/>
+                        - Construction of civil works since 2003.
+                     </p>
+                  </div>
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-train"></i></div>
+                        <h3 class="icon-title text-uppercase">Leveling</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Leveling the industrial works since 2000.
+                     </p>
+                  </div>
+               </div>
+               <div class="col-md-4 col-md-offset-4">
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-institution"></i></div>
+                        <h3 class="icon-title text-uppercase">Investment</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Investment and trading traffic works.<br/>
+                        - Investment and trading irrigation - hydropower, industrial and civil works.<br/>
+                        - Investment and trading electrical and water works.<br/>
+                        - Investment and trading domestic and foreign minerals.
+                     </p>
+                  </div>
+                  <div class="icon">
+                     <div class="icon-header">
+                        <div class="icon-media"><i class="fa fa-building-o"></i></div>
+                        <h3 class="icon-title text-uppercase">Production</h3>
+                     </div>
+                     <p class="icon-desc">
+                        - Production of building materials since 2000.
+                     </p>
+                  </div>
+               </div>
+            <% end %>
          </div>
       </div>
    </section>
@@ -99,7 +148,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-12">
-               <h2 class="title">Tin tức mới nhất</h2>
+               <h2 class="title"><%= t(:lastest_news) %></h2>
                <div class="owl-nav text-right"> <span class="owlprev"><i class="fa fa-angle-left"></i></span> <span class="owlnext"><i class="fa fa-angle-right"></i></span> </div>
             </div>
          </div>
@@ -131,10 +180,10 @@
             <div class="col-md-12">
                <div class="projects">
                   <div class="projects-header clearfix">
-                     <h2 class="title projects-title visible-lg pull-left">Các công trình</h2>
+                     <h2 class="title projects-title visible-lg pull-left"><%= t(:constructions) %></h2>
                      <ul class="filter filter-dark pull-right">
                         <li>
-                           <button data-filter="*" class="selected">Tất cả</button>
+                           <button data-filter="*" class="selected"><%= t(:all) %></button>
                         </li>
                         <% @project_tags.each do |item| %>
                            <li>
@@ -167,7 +216,7 @@
          <div class="row">
             <!-- Our Clients -->
             <div class="col-md-12">
-               <h2 class="title">Hình ảnh bằng khen</h2>
+               <h2 class="title"><%= t(:certificates_images) %></h2>
                <div class="gallery row">
                      <div class="col-xs-2">
                         <figure class="gallery-item">
@@ -225,7 +274,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="download">
-                  <div class="download-content text-uppercase"><i class="fa fa-file-pdf-o"></i> HỒ SƠ NĂNG LỰC CÔNG TY CỔ PHẦN VIỆT REN</div> <a href="<%= url_for(controller: "admin/companies", action: "hsnl_vietren") %>" target="_blank" class="btn btn-md btn-dark btn-shadow"><i class="fa fa-cloud-download"></i> Download</a> </div>
+                  <div class="download-content text-uppercase"><i class="fa fa-file-pdf-o"></i> <%= t(:company_profile) %></div> <a href="<%= url_for(controller: "admin/companies", action: "hsnl_vietren") %>" target="_blank" class="btn btn-md btn-dark btn-shadow"><i class="fa fa-cloud-download"></i> Download</a> </div>
             </div>
          </div>
       </div>
