--- a/app/views/investment_projects/index.html.erb
+++ b/app/views/investment_projects/index.html.erb
@@ -7,15 +7,16 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Thư viện hình ảnh</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:investment_projects) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li><%= link_to "Thư viện hình ảnh", { controller: "gallery", action: "index" } %></li>
-              <li class="active">Hình ảnh các dự án đầu tư</li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li><%= link_to t(:gallery), "#" %></li>
+              <li class="active"><%= t(:investment_projects) %></li>
            </ol>
         </div>
      </div>
