--- a/app/views/letter_spring/index.html.erb
+++ b/app/views/letter_spring/index.html.erb
@@ -7,14 +7,14 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Thư xuân</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:letter_spring) %></h1> </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li class="active">Thư xuân</li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li class="active"><%= t(:letter_spring) %></li>
            </ol>
         </div>
      </div>
