--- a/app/views/notification_single/index.html.erb
+++ b/app/views/notification_single/index.html.erb
@@ -7,14 +7,15 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Thông báo</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:notification) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li><%= link_to "Thông báo", { controller: "notification", action: "index" } %></li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li><%= link_to t(:notification), { controller: "notification", action: "index" } %></li>
               <li class="active"><%= @notification.title_vn %></li>
            </ol>
         </div>
