--- a/app/views/project_detail/index.html.erb
+++ b/app/views/project_detail/index.html.erb
@@ -13,7 +13,7 @@
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
               <li><%= link_to @project.project_tag.title_vn, "#" %></li>
               <li class="active"><%= @project.name_vn %></li>
            </ol>
