--- a/app/views/under_construction/index.html.erb
+++ b/app/views/under_construction/index.html.erb
@@ -7,14 +7,15 @@
   <main class="site-main">
      <!-- Page header -->
      <div class="page-header page-header-sm">
-        <h1 class="text-uppercase page-title">Công trình</h1> </div>
+        <h1 class="text-uppercase page-title"><%= t(:implementing_construction_works) %></h1>
+     </div>
      <!-- /Page header -->
      <!-- Breadcrumbs -->
      <div class="breadcrumb">
         <div class="container">
            <ol>
-              <li><a href="<%= root_path %>">Trang chủ</a></li>
-              <li class="active">Công trình</li>
+              <li><a href="<%= root_path %>"><%= t(:home) %></a></li>
+              <li class="active"><%= t(:implementing_construction_works) %></li>
            </ol>
         </div>
      </div>
@@ -22,7 +23,7 @@
       <div class="container">
          <div class="row">
             <div class="page-content col-md-12">
-               <h3 class="title text-uppercase">CÔNG TRÌNH ĐANG THI CÔNG</h3>
+               <h3 class="title text-uppercase"><%= t(:implementing_construction_works) %></h3>
                <div class="post-content">
                   <div class="col-md-12">
                      <div class="row">
